--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.6.0",
     "@line/liff": "^2.24.0",
     "bootstrap": "^5.3.2",
     "next": "14.2.14",
