--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.6.0",
+    "@line/bot-sdk": "^9.4.0",
     "@line/liff": "^2.24.0",
     "bootstrap": "^5.3.2",
     "next": "14.2.14",
