--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@line/bot-sdk": "^9.4.0",
     "@line/liff": "^2.24.0",
     "bootstrap": "^5.3.2",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.2.14",
     "react": "^18",
     "react-bootstrap-icons": "^1.11.4",
