--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@line/liff": "^2.24.0",
     "bootstrap": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
+    "leaflet": "^1.9.4",
     "next": "14.2.14",
     "react": "^18",
     "react-bootstrap-icons": "^1.11.4",
